--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Fiction'
+- GITenberg
 title: "Guirlanden um Die Urnen der Zukunft\r\nEine interessante, originelle Familiengeschichte\
   \ aus dem drei und zwanzigsten Jahrhunderte"
 url: http://www.gutenberg.org/ebooks/45644
